added some styles

--- a/components/CamperItem/CamperItem.module.css
+++ b/components/CamperItem/CamperItem.module.css
@@ -1,5 +1,44 @@
 .camperItem {
   display: flex;
+  border: 1px solid var(--gray-light);
+  border-radius: 20px;
+  padding: 24px;
+  width: 888px;
+  height: 368px;
+  background: var(--white);
+  margin-bottom: 32px;
+}
+
+.camperItem__image {
+  border-radius: 10px;
+}
+
+.camperItem__top {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.camperItem__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+  color: var(--main);
+}
+
+.camperItem__subheader {
+  display: flex;
+  gap: 16px;
+  font-size: 14px;
+  color: var(--gray);
+}
+
+.camperItem__star {
+  color: var(--yellow);
 }
 
 .camperItem__features {
