--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -5,6 +5,10 @@
   gap: 24px;
   padding: 12px;
   border-block-end: 1px solid #ccc;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: white;
 }
 
 .navigation {
