corrected buttons, filters

--- a/app/catalog/catalogPage.module.css
+++ b/app/catalog/catalogPage.module.css
@@ -1,13 +1,17 @@
 .container {
   display: flex;
+  align-items: flex-start;
+  justify-content: stretch;
+  /* gap: calc(100vw-1248px); */
   gap: 64px; /* Add some space between filters and list */
+  padding: 48px 64px;
 }
 
 .filtersWrapper {
-  position: sticky;
+  /* position: sticky; */
   top: 60px; /* Height of the sticky header */
   height: calc(100vh - 80px); /* Full height minus header and some padding */
-  overflow-y: auto; /* Allow filters to scroll if content is too long */
+  /* overflow-y: auto; Allow filters to scroll if content is too long */
   flex-basis: 360px; /* Fixed width for the filters block */
   flex-shrink: 0; /* Prevent the block from shrinking */
 }
