--- a/app/globals.css
+++ b/app/globals.css
@@ -13,12 +13,12 @@
   --rating: #ffc531;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
