--- a/components/CamperItem/CamperItem.module.css
+++ b/components/CamperItem/CamperItem.module.css
@@ -11,6 +11,11 @@
 
 .camperItem__image {
   border-radius: 10px;
+  height: 320px;
+  width: auto; /* ширина автоматична */
+  object-fit: cover; /* обрізати по ширині */
+  overflow: hidden;
+  object-position: left center; /* позиціонування зображення */
 }
 
 .camperItem__content {
@@ -51,6 +56,11 @@
 }
 
 .camperItem__description {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--text);
   white-space: nowrap; /* Не переносити текст на новий рядок */
   overflow: hidden; /* Ховати вихідний за межі контейнера текст */
   text-overflow: ellipsis; /* Додавати три крапки в кінці обрізаного тексту */
@@ -60,8 +70,23 @@
 .camperItem__features {
   display: flex;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 8px;
   margin-top: 12px;
+}
+
+.camperItem__feature {
+  border-radius: 100px;
+  padding: 12px 18px;
+  width: auto;
+  height: 48px;
+  background: var(--badges);
+  mix-blend-mode: multiply;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--main);
 }
 
 .btn {
