--- a/app/Hero.module.css
+++ b/app/Hero.module.css
@@ -4,13 +4,46 @@
   background-position: center;
   height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 64px;
 }
 
 .btn {
   border-radius: 200px;
-  padding: 16px 60px;
+  padding: 16px 0;
   width: 173px;
   height: 56px;
   background: var(--button);
   border-color: transparent;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: -0.01em;
+  color: var(--white);
+  text-align: center;
+}
+
+.btn:hover {
+  background: var(--button-hover);
+}
+
+.heroTitle {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 67%;
+  color: var(--inputs);
+  margin-bottom: 16px;
+}
+
+.heroItem {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+  color: var(--inputs);
+  margin-bottom: 40px;
 }
