--- a/app/globals.css
+++ b/app/globals.css
@@ -49,3 +49,52 @@ a {
     color-scheme: dark;
   }
 }
+
+.loader {
+  display: flex;
+  gap: 5px;
+  margin-left: calc((100% - 130px) / 2);
+  margin-top: 40px;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: var(--gray);
+  border-radius: 50%;
+  animation: bounce 0.6s infinite alternate;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.dot:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.dot:nth-child(4) {
+  animation-delay: 0.2s;
+}
+.dot:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.dot:nth-child(6) {
+  animation-delay: 0.1s;
+}
+.dot:nth-child(7) {
+  animation-delay: 0.3s;
+}
+.dot:nth-child(8) {
+  animation-delay: 0.2s;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
