--- a/components/Filters/Filters.module.css
+++ b/components/Filters/Filters.module.css
@@ -17,6 +17,19 @@
   color: var(--gray);
 }
 
+.inputWrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.locationIcon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
 .locationInput input {
   border-radius: 12px;
   padding: 18px 218px 18px 20px;
@@ -28,6 +41,7 @@
   font-size: 16px;
   line-height: 150%;
   color: var(--main);
+  border: none;
 }
 
 .equipmentSection {
