--- a/components/UI/Heart/HeartIcon.module.css
+++ b/components/UI/Heart/HeartIcon.module.css
@@ -1,20 +1,17 @@
 .heart {
   cursor: pointer;
-  stroke: black;
-  fill: none;
-  transition:
-    stroke 0.3s ease,
-    fill 0.3s ease;
-  border: 2px solid black;
-  border-radius: 50%;
-  padding: 2px;
-  width: 28px;
-  height: 28px;
-  box-sizing: border-box;
+  fill: black;
+  transition: fill 0.3s ease;
+  border: none;
+  padding: 1px;
+  width: 26px;
+  height: 24px;
+  outline: none;
+  margin-left: 12px;
+  /* box-sizing: border-box; */
 }
 
 .selected {
-  stroke: red;
   fill: red;
-  border-color: red;
+  outline: none;
 }
