--- a/components/FeaturesPanel/FeaturesPanel.module.css
+++ b/components/FeaturesPanel/FeaturesPanel.module.css
@@ -1,8 +1,73 @@
 .featuresWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+
   border-radius: 10px;
-  padding: 44px 80px;
+  padding: 44px 52px;
   width: 631px;
   height: 588px;
   background: var(--inputs);
   /* flex: 1; */
+}
+
+.camperItem__features {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 12px;
+}
+
+.camperItem__feature {
+  border-radius: 100px;
+  padding: 12px 18px;
+  width: auto;
+  height: 48px;
+  background: var(--badges);
+  mix-blend-mode: multiply;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--main);
+}
+
+.divider {
+  width: 527px;
+  height: 296px;
+}
+
+.vehicleDetails {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 120%;
+  color: var(--main);
+  margin-bottom: 24px;
+}
+
+.line {
+  border: none;
+  height: 1px;
+  background-color: var(--gray-light);
+  margin-bottom: 24px;
+}
+
+.detailsTable {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.detailsTable__row {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--main);
+  display: flex;
+  justify-content: space-between;
+  /* margin-bottom: 16px; */
 }
