--- a/components/ReviewsList/ReviewsList.module.css
+++ b/components/ReviewsList/ReviewsList.module.css
@@ -1,8 +1,11 @@
 .reviewsWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 44px;
   border-radius: 10px;
-  padding: 44px 80px;
+  /* padding: 44px 80px; */
   width: 631px;
-  height: 588px;
+  height: 340px;
   background: var(--background);
   /* flex: 1; */
 }
